Adding some stuff

--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-<h1>
-    The Lever
-</h1>
+<link rel="stylesheet" href="styles.css">
+
+<div class="maintitle">
+    <h1> Fulcrum </h1>
+</div>
+
+<div class="socials">
+    <h1 style="text-align:center">Social Media</h1>
+    <div style="margin-bottom: 5%" class="center">
+        <a href="google.com">
+            <img src="images/youtube_monochrome.png" style="width: 10%; float:left"></img>
+        </a>
+        <a href="google.com">
+            <img src="images/instagram_monochrome.png" style="width: 10%;"></img>
+        </a>
+        <a href="google.com">
+            <img src="images/tiktok_monochrome.png" style="width: 10%; float:left"></img>
+        </a>
+    </div>
+</div>
+
+<div class="mymusic">
+    <h1 style="text-align:center">My Music</h1>
+    <p>Spotify</p>
+    <p>Apple Music</p>
+    <p>YouTube Music</p>
+</div>
+
+<div class="discord">
+    <h1>Join the Discord!</h1>
+</div>
