Adding socials and music sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 style="text-align:center">Social Media</h1>
     <div style="margin-bottom: 5%" class="center">
         <a href="google.com">
-            <img src="images/youtube_monochrome.png" style="width: 10%; float:left"></img>
+            <img src="images/youtube_monochrome.png" style="width: 10%; float: left; padding-top: 10px;"></img>
         </a>
         <a href="google.com">
             <img src="images/instagram_monochrome.png" style="width: 10%;"></img>
@@ -21,9 +21,17 @@
 
 <div class="mymusic">
     <h1 style="text-align:center">My Music</h1>
-    <p>Spotify</p>
-    <p>Apple Music</p>
-    <p>YouTube Music</p>
+    <div style="margin-bottom: 5%" class="center">
+        <a href="google.com">
+            <img src="images/spotify_monochrome.png" style="width: 10%; float: left;"></img>
+        </a>
+        <a href="google.com">
+            <img src="images/applemusic_monochrome.png" style="width: 10%;"></img>
+        </a>
+        <a href="google.com">
+            <img src="images/youtubemusic_monochrome.png" style="width: 10%; float:left"></img>
+        </a>
+    </div>
 </div>
 
 <div class="discord">
