--- a/index.html
+++ b/index.html
@@ -3,37 +3,44 @@
 <div class="maintitle">
     <h1> Fulcrum </h1>
 </div>
-
 <div class="socials">
     <h1 style="text-align:center">Social Media</h1>
     <div style="margin-bottom: 5%" class="center">
         <a href="google.com">
-            <img src="images/youtube_monochrome.png" style="width: 10%; float: left; padding-top: 10px;"></img>
+            <img src="images/youtube_monochrome.png" style="width: 10%; float: left; padding-top: 10px; padding-right: 5%;"></img>
         </a>
         <a href="google.com">
-            <img src="images/instagram_monochrome.png" style="width: 10%;"></img>
+            <img src="images/instagram_monochrome.png" style="width: 10%; padding-right: 5%"></img>
         </a>
         <a href="google.com">
-            <img src="images/tiktok_monochrome.png" style="width: 10%; float:left"></img>
+            <img src="images/tiktok_monochrome.png" style="width: 10%; float:left; padding-right: 5%    "></img>
         </a>
     </div>
 </div>
 
 <div class="mymusic">
     <h1 style="text-align:center">My Music</h1>
-    <div style="margin-bottom: 5%" class="center">
+    <div style="margin-bottom: 5%; margin-left: 31%" class="center">
         <a href="google.com">
-            <img src="images/spotify_monochrome.png" style="width: 10%; float: left;"></img>
+            <img src="images/spotify_monochrome.png" style="width: 11.5%; float: left; margin-top: -5px; padding-right: 22px"></img>
         </a>
         <a href="google.com">
             <img src="images/applemusic_monochrome.png" style="width: 10%;"></img>
         </a>
         <a href="google.com">
-            <img src="images/youtubemusic_monochrome.png" style="width: 10%; float:left"></img>
+            <img src="images/youtubemusic_monochrome.png" style="width: 10%; float:left; padding-right: 30px;"></img>
         </a>
     </div>
 </div>
 
-<div class="discord">
-    <h1>Join the Discord!</h1>
-</div>
+<a href="google.com">
+    <div class="discord">
+            <h1>Join the Discord!</h1>
+    </div>
+</a>
+
+<a href="google.com">
+    <div class="coffee">
+            <h1>Buy Me A Coffee</h1>
+    </div>
+</a>
