--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <a href="https://www.youtube.com/channel/UCIJNg5Rl09KhMUDcvUbMgAA">
             <img src="images/youtube_monochrome.png" style="width: 10%; float: left; padding-top: 10px; padding-right: 5%;"></img>
         </a>
-        <a href="google.com">
+        <a href="https://www.instagram.com/fulcrummusic_/">
             <img src="images/instagram_monochrome.png" style="width: 10%; padding-right: 5%"></img>
         </a>
-        <a href="google.com">
+        <a href="https://www.tiktok.com/@fulcrummusic_">
             <img src="images/tiktok_monochrome.png" style="width: 10%; float:left; padding-right: 5%    "></img>
         </a>
     </div>
@@ -21,25 +21,25 @@
 <div class="mymusic">
     <h1 style="text-align:center">My Music</h1>
     <div style="margin-bottom: 5%; margin-left: 31%" class="center">
-        <a href="google.com">
+        <a href="https://open.spotify.com/artist/67b9YlRhVb55jmLKBJwxQg">
             <img src="images/spotify_monochrome.png" style="width: 11.5%; float: left; margin-top: -5px; padding-right: 22px"></img>
         </a>
-        <a href="google.com">
+        <a href="https://music.apple.com/us/artist/fulcrum/1744868668">
             <img src="images/applemusic_monochrome.png" style="width: 10%;"></img>
         </a>
-        <a href="google.com">
+        <a href="d">
             <img src="images/youtubemusic_monochrome.png" style="width: 10%; float:left; padding-right: 30px;"></img>
         </a>
     </div>
 </div>
 
-<a href="google.com">
+<a href="https://discord.gg/RhEhmDKeBT">
     <div class="discord">
             <h1>Join the Discord!</h1>
     </div>
 </a>
 
-<a href="google.com">
+<a href="https://ko-fi.com/fulcrummusic_">
     <div class="coffee">
             <h1>Buy Me A Coffee</h1>
     </div>
