--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="socials">
     <h1 style="text-align:center">Social Media</h1>
     <div style="margin-bottom: 5%" class="center">
-        <a href="google.com">
+        <a href="https://www.youtube.com/channel/UCIJNg5Rl09KhMUDcvUbMgAA">
             <img src="images/youtube_monochrome.png" style="width: 10%; float: left; padding-top: 10px; padding-right: 5%;"></img>
         </a>
         <a href="google.com">
