Adding more links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://music.apple.com/us/artist/fulcrum/1744868668">
             <img src="images/applemusic_monochrome.png" style="width: 10%;"></img>
         </a>
-        <a href="d">
+        <a href="https://music.youtube.com/channel/UC5EDypNXLfy2nVeHGpYCiEA">
             <img src="images/youtubemusic_monochrome.png" style="width: 10%; float:left; padding-right: 30px;"></img>
         </a>
     </div>
