Buy me a guitar pick

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
 
 <a href="https://ko-fi.com/fulcrummusic_">
     <div class="coffee">
-            <h1>Buy Me A Coffee</h1>
+            <h1>Buy me a guitar pick!</h1>
     </div>
 </a>
